<resources>
    <string name="app_name">Virtual Shopping</string>
    <string name="email">  email</string>
    <string name="password">password</string>
    <string name="admin">admin</string>
    <string name="company">User</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="phone">phone</string>
    <string name="sign_up">Sign Up</string>

    <string name="user">user</string>
    <string name="adminid">admin@gmail.com</string>
    <string name="orderid">orderID</string>
    <string name="Search">Search</string>
        <string name="title_activity_msrdetails">ActivityMSRDetails</string>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="nav_header_title">Android Studio</string>
        <string name="nav_header_subtitle">android.studio@android.com</string>
        <string name="nav_header_desc">Navigation header</string>
        <string name="action_settings">Settings</string>
        <string name="title_activity_main2">Main2Activity</string>
        <string name="section_format">Hello World from section: %1$d</string>
        <string name="title_activity_msr">ActivityMSR</string>
        <string name="tab_text_1">Basic Info</string>
        <string name="tab_text_2">Visit Card</string>
        <string name="tab_text_3">Performance</string>

        <!-- TODO: Remove or change this placeholder text -->
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="calendar">Calendar</string>
        <string name="lorem_i">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley</string>

        <string name="UserName">Email</string>
        <string name="Password">Password</string>
        <string name="submit">Login</string>
        <string name="SignIn">Sign In</string>
    <string name="SignUp">Sign Up</string>
        <string name="tag_line">Integrating Communities</string>
        <string name="copyright">Copyright©2019 Digital Landscape</string>
        <string name="title_activity_test">TestActivity</string>
        <string name="title_home">Home</string>
        <string name="title_dashboard">Dashboard</string>
        <string name="title_profile">Profile</string>
        <string name="route">Route</string>
        <string name="task">Task</string>
        <string name="schedule">Schedule</string>
        <string name="inventory">Inventory</string>
        <string name="title_activity_basit">basit</string>
        <string name="title_notifications">Notifications</string>
        <string name="chat">Chat</string>

        <string name="GOOGLE_APIKEY">AIzaSyBz_uM4Zhlrp_tBIUECf5Wi19YiGwYMZ1o</string>
        <string name="echo_logo_text">ECHO SYSTEM - CRM</string>
        <string name="title_logout">Logout</string>
    <string name="spinner_title">Select</string>

</resources>

