<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_theme_background_light"
    tools:context=".Auth.LoginAcitvity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_input_background"
        android:elevation="12dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="4.6"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="25sp"
        android:layout_marginStart="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center"
            android:layout_marginBottom="25dp"
            android:text="@string/SignIn"
            android:textColor="@color/foreground_colour"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_input_field_background"
            android:fontFamily="serif"
            android:hint="@string/email"
            android:textColor="@color/colorAccent"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:inputType="textPersonName"
            android:paddingBottom="15dp"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_input_field_background"
            android:fontFamily="serif"
            android:hint="@string/password"
            android:textColor="@color/colorAccent"
            android:inputType="textPassword"
            android:paddingBottom="15dp"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginBottom="10dp" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/admin_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/admin"
                android:fontFamily="serif"
                android:textColor="@color/foreground_colour"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/user_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/company"
                android:fontFamily="serif"
                android:textColor="@color/foreground_colour"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_click"
            android:elevation="0dp"
            android:fontFamily="serif"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/button_text_colour"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textViewSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="15dp"
            android:text="Don't have account? Sign Up"
            android:textAlignment="center"
            android:fontFamily="serif"
            android:gravity="center"
            android:textColor="@color/foreground_colour"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/circular_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:indeterminate="false"
        android:max="48"
        android:progress="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:progressDrawable="@drawable/customprogressbar"/>
</androidx.constraintlayout.widget.ConstraintLayout>
