<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_theme_background_light"
    tools:context=".Auth.LoginAcitvity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_input_background"
        android:elevation="12dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="4.6"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/SignUp"
            android:textColor="@color/foreground_colour"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_input_field_background"
            android:fontFamily="serif"
            android:hint="@string/name"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:inputType="textPersonName"
            android:paddingBottom="15dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_input_field_background"
            android:fontFamily="serif"
            android:hint="@string/email"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:textColor="@color/colorAccent"
            android:inputType="textPersonName"
            android:paddingBottom="15dp"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_input_field_background"
            android:fontFamily="serif"
            android:hint="@string/password"
            android:paddingBottom="15dp"
            android:paddingTop="5dp"
            android:textColor="@color/colorAccent"
            android:paddingStart="10dp"
            android:inputType="textPassword"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:fontFamily="sans-serif"
            android:hint="@string/phone"
            android:inputType="number"
            android:background="@drawable/ic_input_field_background"
            android:maxLength="11"
            android:paddingBottom="15dp"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@android:color/darker_gray"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_click"
            android:elevation="0dp"
            android:fontFamily="serif"
            android:text="@string/SignUp"
            android:textAllCaps="false"
            android:textColor="@color/button_text_colour"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="15dp"
            android:text="Already have an account? Login"
            android:textAlignment="center"
            android:fontFamily="serif"
            android:gravity="center"
            android:textColor="@color/foreground_colour"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
